# wiki-search-with-pyspark

./: .gitignore  README.md  pyproject.toml  shell.nix
.clinerules/: development_rules.md  project_basics.md
config/: settings.py  urls.py
core/: urls.py  views.py
docs-vibe/: 001_django_initialization.md  002_local_environment_store.md
scripts/: load_env.py
src/wikipedia_search_engine/: __init__.py
