[project]
name = "wikipedia-search-engine"
version = "0.1.0"
description = "A toy project for learning PySpark"
readme = "README.md"
authors = [
    { name = "loeeeee", email = "95266635+loeeeee@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wikipedia-search-engine = "wikipedia_search_engine:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
