[project]
name = "wikipedia-search-engine"
version = "0.1.0"
description = "A Django web application with PySpark async data processing engine for searching Wikipedia articles."
readme = "README.md"
authors = [
    { name = "loeeeee", email = "95266635+loeeeee@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
